--- a/templates/index.html
+++ b/templates/index.html
@@ -109,14 +109,14 @@
       <tr class="totais">
         <td>Total</td>
         <td>{{ totais.pc }}</td>
-        <td>{{ totais.notebook }}</td>
-        <td>{{ totais.monitor }}</td>
-        <td>{{ totais.mouse }}</td>
-        <td>{{ totais.teclado }}</td>
-        <td>{{ totais.webcam }}</td>
-        <td>{{ totais.hd }}</td>
-        <td>{{ totais.projetor }}</td>
-        <td>-</td>
+<td>{{ totais.notebooks }}</td>
+<td>{{ totais.monitores }}</td>
+<td>{{ totais.mouses }}</td>
+<td>{{ totais.teclados }}</td>
+<td>{{ totais.webcams }}</td>
+<td>{{ totais.hd }}</td>
+<td>{{ totais.projetores }}</td>
+
       </tr>
       {% endif %}
     </tbody>
