--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
   <input type="text" name="comodo" placeholder="Cômodo" required />
 
   <input type="number" name="pc" placeholder="PCs" />
-  <input type="number" name="notebooks" placeholder="Notebooks" />
+  <input type="number" name="notebook" placeholder="Notebooks" />
   <input type="number" name="monitores" placeholder="Monitores" />
   <input type="number" name="mouses" placeholder="Mouses" />
   <input type="number" name="teclados" placeholder="Teclados" />
@@ -75,7 +75,7 @@
       <tr>
         <th>Cômodo</th>
         <th>PCs</th>
-        <th>Notebooks</th>
+        <th>Notebook</th>
         <th>Monitores</th>
         <th>Mouses</th>
         <th>Teclados</th>
@@ -109,7 +109,7 @@
       <tr class="totais">
         <td>Total</td>
         <td>{{ totais.pc }}</td>
-<td>{{ totais.notebooks }}</td>
+<td>{{ totais.notebook }}</td>
 <td>{{ totais.monitores }}</td>
 <td>{{ totais.mouses }}</td>
 <td>{{ totais.teclados }}</td>
