--- a/templates/index.html
+++ b/templates/index.html
@@ -59,12 +59,12 @@
 
   <input type="number" name="pc" placeholder="PCs" />
   <input type="number" name="notebook" placeholder="Notebooks" />
-  <input type="number" name="monitores" placeholder="Monitores" />
-  <input type="number" name="mouses" placeholder="Mouses" />
-  <input type="number" name="teclados" placeholder="Teclados" />
-  <input type="number" name="webcams" placeholder="Webcams" />
+  <input type="number" name="monitore" placeholder="Monitores" />
+  <input type="number" name="mouse" placeholder="Mouses" />
+  <input type="number" name="teclado" placeholder="Teclados" />
+  <input type="number" name="webcam" placeholder="Webcams" />
   <input type="number" name="hd" placeholder="HDs" />
-  <input type="number" name="projetores" placeholder="Projetores" />
+  <input type="number" name="projetore" placeholder="Projetores" />
 
   <button type="submit">Adicionar</button>
 </form>
@@ -76,12 +76,12 @@
         <th>Cômodo</th>
         <th>PCs</th>
         <th>Notebook</th>
-        <th>Monitores</th>
-        <th>Mouses</th>
-        <th>Teclados</th>
-        <th>Webcams</th>
+        <th>Monitore</th>
+        <th>Mouse</th>
+        <th>Teclado</th>
+        <th>Webcam</th>
         <th>HDs</th>
-        <th>Projetores</th>
+        <th>Projetore</th>
         <th>Excluir</th>
       </tr>
     </thead>
@@ -110,12 +110,12 @@
         <td>Total</td>
         <td>{{ totais.pc }}</td>
 <td>{{ totais.notebook }}</td>
-<td>{{ totais.monitores }}</td>
+<td>{{ totais.monitore }}</td>
 <td>{{ totais.mouses }}</td>
-<td>{{ totais.teclados }}</td>
+<td>{{ totais.teclado }}</td>
 <td>{{ totais.webcams }}</td>
 <td>{{ totais.hd }}</td>
-<td>{{ totais.projetores }}</td>
+<td>{{ totais.projetore }}</td>
 
       </tr>
       {% endif %}
