--- a/templates/index.html
+++ b/templates/index.html
@@ -111,7 +111,7 @@
         <td>{{ totais.pc }}</td>
 <td>{{ totais.notebook }}</td>
 <td>{{ totais.monitor }}</td>
-<td>{{ totais.mouses }}</td>
+<td>{{ totais.mouse }}</td>
 <td>{{ totais.teclado }}</td>
 <td>{{ totais.webcam }}</td>
 <td>{{ totais.hd }}</td>
