--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
   <input type="text" name="comodo" placeholder="Cômodo" required />
 
   <input type="number" name="pc" placeholder="PCs" />
-  <input type="number" name="notebook" placeholder="Notebooks" />
+  <input type="number" name="notebooks" placeholder="Notebooks" />
   <input type="number" name="monitor" placeholder="Monitores" />
   <input type="number" name="mouse" placeholder="Mouses" />
   <input type="number" name="teclado" placeholder="Teclados" />
