--- a/templates/index.html
+++ b/templates/index.html
@@ -57,14 +57,14 @@
   <form method="POST" action="/adicionar">
   <input type="text" name="comodo" placeholder="Cômodo" required />
 
-  <input type="number" name="pc" placeholder="PCs" />
   <input type="number" name="notebooks" placeholder="Notebooks" />
-  <input type="number" name="monitor" placeholder="Monitores" />
-  <input type="number" name="mouse" placeholder="Mouses" />
-  <input type="number" name="teclado" placeholder="Teclados" />
-  <input type="number" name="webcam" placeholder="Webcams" />
-  <input type="number" name="hd" placeholder="HDs" />
-  <input type="number" name="projetor" placeholder="Projetores" />
+<input type="number" name="monitores" placeholder="Monitores" />
+<input type="number" name="mouses" placeholder="Mouses" />
+<input type="number" name="teclados" placeholder="Teclados" />
+<input type="number" name="webcams" placeholder="Webcams" />
+<input type="number" name="hd" placeholder="HDs" />
+<input type="number" name="projetores" placeholder="Projetores" />
+
 
   <button type="submit">Adicionar</button>
 </form>
