--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
   <form method="POST" action="/adicionar">
   <input type="text" name="comodo" placeholder="Cômodo" required />
 
- <input type="number" name="pc" placeholder="PCs" />
+ <input type="number" name="pc" placeholder="PC" />
 <input type="number" name="notebooks" placeholder="Notebooks" />
 <input type="number" name="monitores" placeholder="Monitores" />
 <input type="number" name="mouses" placeholder="Mouses" />
